env/test/deployment-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend-new
  labels:
    app: httpd-frontend-new
spec:
  selector:
    matchLabels:
      app: httpd-frontend-new
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpd-frontend-new
    spec:
      containers:
        - image: registry.redhat.io/rhel8/httpd-25
          imagePullPolicy: Always
          name: httpd-rhel7
          ports:
            - containerPort: 8080
              name: http-port
            - containerPort: 8443
              name: https-port
