env/test/service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-frontend-new
  labels:
    app: httpd-frontend-new
spec:
  ports:
    - port: 8080
      name: http-port
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpd-frontend-new
