env/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-frontend-http-port
  labels:
    app: httpd-frontend
spec:
  ports:
    - port: 8080
      name: http-port
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpd-frontend
